feat(plans): implements plans handlers
